test/MC/SVE/regression-tests/negative_tests/sve-st3h-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU16E3Store2LSSZ
// Offset register Rm cannot be xzr
st3h {z13.h, z14.h, z15.h}, p3, [x9, xzr, lsl #1]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
